--- a/project.html
+++ b/project.html
@@ -7,8 +7,22 @@
     <title>My Page Title</title>
 </head>
 <body>
-    ...
-    Content goes here!
-    ...
+    <h1>Problem/Data Domain</h1>
+
+    <p>
+        Plant care refers to providing plants with proper nutrients, so that they can continue to grow. The issue is that a lot of new plant owners generally don’t know where to start with this because there are a lot of different things that go into caring for a plant.
+    </p>
+
+    <p>
+        Plant care is something that people who have never had plants may be confused about as it is unexplored territory. Individuals who are new to plant care may not know what kind of house plant they should buy for their home. When researching plant care for a specific plant, there are various sources that discuss different specifications such as the recommended kinds of products, the time constraints, and other factors. With hundreds of different sources, it becomes overwhelming to the user and further confuses them. Our web app addresses that issue and combines information from various credible sources to make an effective and informational website that is perfect for new plant owners.
+    </p>
+
+    <p>
+        Bloomscape and Florish are two examples of existing attempts to solve this problem. Bloomscape is an app that allows users to create a watering/fertilizing schedule for their plants, track their plant collection, and view plant care tips. Florish helps you find the perfect plant for your needs, receive care instructions, get reminders, and find the right lighting. 
+    </p>
+
+    <p>
+        It is an all too common occurrence to see someone purchase a plant for their home with the intention of paying attention to its needs with consistency, but end up not able to keep up with the care that is required. Oftentimes, the issue ends up being that instructions for proper care aren’t made aware to the plant owner or that they don’t have the knowledge or awareness to choose a plant that best fits their lifestyle beforehand. Additionally, experienced plant owners could also benefit from a single resource that displays species suggestions, care tips, etc. A web app could find these users’ preferences, provide them with helpful information, and help them nurture their plants.  
+    </p>
 </body>
 </html>
