Add app description

--- a/project.html
+++ b/project.html
@@ -24,5 +24,29 @@
     <p>
         It is an all too common occurrence to see someone purchase a plant for their home with the intention of paying attention to its needs with consistency, but end up not able to keep up with the care that is required. Oftentimes, the issue ends up being that instructions for proper care aren’t made aware to the plant owner or that they don’t have the knowledge or awareness to choose a plant that best fits their lifestyle beforehand. Additionally, experienced plant owners could also benefit from a single resource that displays species suggestions, care tips, etc. A web app could find these users’ preferences, provide them with helpful information, and help them nurture their plants.  
     </p>
+
+    <h1>App Description</h1>
+
+    <p>
+        The primary users of this application are people who are new to taking care of their own plants as well as those who are already familiar with plant care, but would like a more structured system for care.  
+    </p>
+
+    <p>
+        “Half” Feature: One interactive feature is a page with a range of different kinds of basic house plants in a card format. One side will have the name and picture of a specific plant and when you click on the card and flip it over, the other side will have a few facts about the plant such as watering schedule, environment needed, pest control, and other basic information. 
+    </p>
+    <p>
+        First Feature: This feature will be an interactive quiz that considers information about the user and suggests a type of plant that they should consider buying and caring for. The quiz will have questions such as “How much free time do you have?”, “Have you had any plants in the past?”, “What is the weather like where you live?”, etc. Based on these questions, we will provide a category or type of plant that best fits the user. 
+    </p>
+    <p>
+        Second Feature: This feature is something that is essential for new plant owners. Many people have the issue of misunderstanding how often to water plants. They either overwater or do not water enough. That issue is solved with an interactive calendar that will generate the watering schedule of your plant automatically after you choose the kind of plant you own. If you choose to do so, this calendar will also notify you on watering day.</p>
+    </p>
+
+    <p>
+        We are planning to draw data from https://www.houseplant411.com/, http://www.tropicopia.com/house-plant/gallery-01.html, or https://data.world/sharon/vegetables-herbs-and-edible-flowers. These sites contain data about a variety of houseplants and how to grow and care for them.
+    </p>
+
+    <p>
+        Often, people want to have houseplants to keep in their home, but struggle with actually taking care of them properly. To help with this problem, our app provides key information about how to take care of your plants so people (especially beginners) can be more knowledgeable about this. We take into account the different lifestyles people have when providing a plant recommendation. In addition, people who are just starting out with plant care generally are unaware of the different factors that go into taking care of plants. We have taken care of this issue by outlining this information so users can just focus on growing their plants. Our app is a great resource for people who want to bring their plant care to the next level.
+    </p>
 </body>
 </html>
