--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <meta name="author" content="your name">
     <meta name="description" content="description of your page">
     <title>My Page Title</title>
+    <link rel="stylesheet" href="css/proposal.css">
 </head>
 <body>
     <h1>Problem/Data Domain</h1>
