added section tag

--- a/project.html
+++ b/project.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Problem/Data Domain</h1>
+    <section>
 
     <p>
         Plant care refers to providing plants with proper nutrients, so that they can continue to grow. The issue is that a lot of new plant owners generally don’t know where to start with this because there are a lot of different things that go into caring for a plant.
@@ -25,8 +26,10 @@
     <p>
         It is an all too common occurrence to see someone purchase a plant for their home with the intention of paying attention to its needs with consistency, but end up not able to keep up with the care that is required. Oftentimes, the issue ends up being that instructions for proper care aren’t made aware to the plant owner or that they don’t have the knowledge or awareness to choose a plant that best fits their lifestyle beforehand. Additionally, experienced plant owners could also benefit from a single resource that displays species suggestions, care tips, etc. A web app could find these users’ preferences, provide them with helpful information, and help them nurture their plants.  
     </p>
+    </section>
 
     <h1>App Description</h1>
+    <section>
 
     <p>
         The primary users of this application are people who are new to taking care of their own plants as well as those who are already familiar with plant care, but would like a more structured system for care.  
@@ -49,5 +52,6 @@
     <p>
         Often, people want to have houseplants to keep in their home, but struggle with actually taking care of them properly. To help with this problem, our app provides key information about how to take care of your plants so people (especially beginners) can be more knowledgeable about this. We take into account the different lifestyles people have when providing a plant recommendation. In addition, people who are just starting out with plant care generally are unaware of the different factors that go into taking care of plants. We have taken care of this issue by outlining this information so users can just focus on growing their plants. Our app is a great resource for people who want to bring their plant care to the next level.
     </p>
+    </section>
 </body>
 </html>
