Alter CSS and add anchor hyperlink to data sets

--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
     </p>
 
     <p>
-        We are planning to draw data from https://www.houseplant411.com/, http://www.tropicopia.com/house-plant/gallery-01.html, or https://data.world/sharon/vegetables-herbs-and-edible-flowers. These sites contain data about a variety of houseplants and how to grow and care for them.
+        We are planning to draw data from <a href=https://www.houseplant411.com/>https://www.houseplant411.com/</a>, <a href=http://www.tropicopia.com/house-plant/gallery-01.html>http://www.tropicopia.com/house-plant/gallery-01.html</a>, or <a href=https://data.world/sharon/vegetables-herbs-and-edible-flowers>https://data.world/sharon/vegetables-herbs-and-edible-flowers.</a>. These sites contain data about a variety of houseplants and how to grow and care for them.
     </p>
 
     <p>
