--- a/project.html
+++ b/project.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="your name">
-    <meta name="description" content="description of your page">
-    <title>My Page Title</title>
+    <meta name="author" content="Ishita Saxena, Archita Singh, Kriti Vajjhula, Saimanasavi Charugundla ">
+    <meta name="description" content="Project Proposal">
+    <title>Plant Care Project Proposal</title>
     <link rel="stylesheet" href="css/proposal.css">
 </head>
 <body>
-    <h1>Problem/Data Domain</h1>
-    <section>
+    <h1>Project Proposal</h1>
+    <section>    
+    <h2>Problem/Data Domain</h2>
 
     <p>
         Plant care refers to providing plants with proper nutrients, so that they can continue to grow. The issue is that a lot of new plant owners generally don’t know where to start with this because there are a lot of different things that go into caring for a plant.
@@ -28,20 +29,20 @@
     </p>
     </section>
 
-    <h1>App Description</h1>
     <section>
+    <h2>App Description</h2>
 
     <p>
         The primary users of this application are people who are new to taking care of their own plants as well as those who are already familiar with plant care, but would like a more structured system for care.  
     </p>
 
-    <p>
+    <p class="bold">
         “Half” Feature: One interactive feature is a page with a range of different kinds of basic house plants in a card format. One side will have the name and picture of a specific plant and when you click on the card and flip it over, the other side will have a few facts about the plant such as watering schedule, environment needed, pest control, and other basic information. 
     </p>
-    <p>
+    <p class="bold">
         First Feature: This feature will be an interactive quiz that considers information about the user and suggests a type of plant that they should consider buying and caring for. The quiz will have questions such as “How much free time do you have?”, “Have you had any plants in the past?”, “What is the weather like where you live?”, etc. Based on these questions, we will provide a category or type of plant that best fits the user. 
     </p>
-    <p>
+    <p class="bold">
         Second Feature: This feature is something that is essential for new plant owners. Many people have the issue of misunderstanding how often to water plants. They either overwater or do not water enough. That issue is solved with an interactive calendar that will generate the watering schedule of your plant automatically after you choose the kind of plant you own. If you choose to do so, this calendar will also notify you on watering day.</p>
     </p>
 
