--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  
-  <!-- link Bootstrap -->
-  <link rel="stylesheet" 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,12 +18,12 @@
     <nav>
     <div>
       <ul>
-        <li></li><a href="#home">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#quiz">Quiz</a></li>
         <li><a href="#calendar">Calendar</a></li>
         <li><a href="#about">About</a></li>
-        <button class = "btn btn-primary">Login</button>
-        <button class = "btn btn-primary">Sign Up</button>
+        <button>Login</button>
+        <button>Sign Up</button>
       </ul>
       </div>
     
@@ -39,10 +35,10 @@
   <header>
     <div class="container">
       <h1>Start your plant journey today</h1>
-      <h2> - Explore different types of plants</h2>
-      <h2> - Take the quiz to find the plants that work best for you</h2>
-      <h2> - Use the calendar to track your watering schedule</h2>
-      <h2> - Login or Sign Up to begin  </h2>
+      <h2> ▻ Explore different types of plants</h2>
+      <h2> ▻ Take the quiz to find the plants that work best for you</h2>
+      <h2> ▻ Use the calendar to track your watering schedule</h2>
+      <h2> ▻ Login or Sign Up to begin  </h2>
     </div>
   </header>  
 </body>
