--- a/about.html
+++ b/about.html
@@ -18,24 +18,23 @@
 
 <body>
 <main>
-    <nav>
-        <div>
-          <ul>
-            <li></li><a href="#home">Home</a></li>
-            <li><a href="#quiz">Quiz</a></li>
-            <li><a href="#calendar">Calendar</a></li>
-            <li><a href="#about">About</a></li>
-            <button class = "btn btn-primary">Login</button>
-            <button class = "btn btn-primary">Sign Up</button>
-          </ul>
-          </div>
-        
-        </nav>
+  <nav>
+    <div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#quiz">Quiz</a></li>
+        <li><a href="#calendar">Calendar</a></li>
+        <li><a href="#about">About</a></li>
+        <button>Login</button>
+        <button>Sign Up</button>
+      </ul>
+      </div>
+    </nav>
     <section id="about"> 
       <div class="container">
         <h1>About Us</h1>
-        <h2>Created by: Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu</h2>
-        <p>Why plant care?</p>
+        <p>Created by: Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu</p>
+        <h2>Why plant care?</h2>
         <p>
             Plant care refers to providing plants with proper nutrients, so that they can continue to grow. The issue is that a lot of new plant owners generally don’t know where to start with this because there are a lot of different factors that go into caring for a plant.
                         
@@ -45,4 +44,4 @@
   </main>
 </body>
 
-  </html>
+</html>
