Add two column layout

--- a/index.html
+++ b/index.html
@@ -5,40 +5,47 @@
   <meta charset="UTF-8">
   <title>Plants</title>
 
+  <!-- link in Bootstrap here -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div class = "body-container">
-    <nav>
+
+  <!-- <header>
+  </header> -->
+
+  <nav>
     <div>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#quiz">Quiz</a></li>
         <li><a href="#calendar">Calendar</a></li>
         <li><a href="#about">About</a></li>
-        <button>Login</button>
-        <button>Sign Up</button>
-      </ul>
-      </div>
-    </nav>
-  </div>
-
-
-  <header>
-    <div class="container">
-      <h1>Start your plant journey today</h1>
-      <h2> ▻ Explore different types of plants</h2>
-      <h2> ▻ Take the quiz to find the plants that work best for you</h2>
-      <h2> ▻ Use the calendar to track your watering schedule</h2>
-      <h2> ▻ Login or Sign Up to begin  </h2>
+        <li><a href="#explore">Explore</a></li>
+        
+        <button class="btn btn-light">Login</button>
+        <button class="btn btn-light">Sign Up</button>
+    
     </div>
-  </header>  
+    </ul>
+    </div>
+  </nav>
+  <div class="d-flex col-6">
+  <div class="body-container">
+    <h1>Start your plant journey today</h1>
+    <h2> ▻ Explore different types of plants</h2>
+    <h2> ▻ Take the quiz to find the plants that work best for you</h2>
+    <h2> ▻ Use the calendar to track your watering schedule</h2>
+    <h2> ▻ Login or Sign Up to begin </h2>
+  </div>
+</div>
+
 </body>
 
 </html>
