Reformatted nav bar elements

--- a/about.html
+++ b/about.html
@@ -21,15 +21,18 @@
   <nav>
     <div>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#quiz">Quiz</a></li>
-        <li><a href="#calendar">Calendar</a></li>
-        <li><a href="#about">About</a></li>
-        <button>Login</button>
-        <button>Sign Up</button>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#quiz">Quiz</a></li>
+      <li><a href="#calendar">Calendar</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#explore">Explore</a></li>
+      <div class="button-right">
+      <button class="btn btn-light">Login</button>
+      <button class="btn btn-light">Sign Up</button>
       </ul>
-      </div>
-    </nav>
+    </div>
+    </div>
+  </nav>
     <section id="about"> 
       <div class="container">
         <h1>About Us</h1>
