--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 
   <nav>
     <div>
-      <ul></ul>
+      <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#quiz">Quiz</a></li>
       <li><a href="#calendar">Calendar</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#explore">Explore</a></li>
-
+      <div class="button-right">
       <button class="btn btn-light">Login</button>
       <button class="btn btn-light">Sign Up</button>
       </ul>
+    </div>
     </div>
   </nav>
 
