Convert navbar to bootstrap

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <!-- <header>
   </header> -->
 
-  <nav>
+  <nav class="navbar-expand">
     <div>
-      <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#quiz">Quiz</a></li>
-      <li><a href="#calendar">Calendar</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#explore">Explore</a></li>
+      <ul class="nav">
+      <li class="nav-link"><a href="#home">Home</a></li>
+      <li class="nav-link"><a href="#quiz">Quiz</a></li>
+      <li class="nav-link"><a href="#calendar">Calendar</a></li>
+      <li class="nav-link"><a href="#about">About</a></li>
+      <li class="nav-link"><a href="#explore">Explore</a></li>
       <div class="button-right">
       <button class="btn btn-light">Login</button>
       <button class="btn btn-light">Sign Up</button>
@@ -35,7 +35,6 @@
     </div>
     </div>
   </nav>
-
 
   <div class="container-fluid h-100">
 
