--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
 
 <body>
 
-  <!-- <header>
-  </header> -->
+  <!-- Linking Pages -->
 
   <nav class="navbar-expand">
     <div>
       <ul class="nav">
-      <li class="nav-link"><a href="#home">Home</a></li>
-      <li class="nav-link"><a href="#quiz">Quiz</a></li>
-      <li class="nav-link"><a href="#calendar">Calendar</a></li>
-      <li class="nav-link"><a href="#about">About</a></li>
-      <li class="nav-link"><a href="#explore">Explore</a></li>
+      <li class="nav-link"><a href="index.html">Home</a></li>
+      <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+      <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="explore.html">Explore</a></li>
       <div class="button-right">
       <button class="btn btn-light">Login</button>
       <button class="btn btn-light">Sign Up</button>
