--- a/quiz.html
+++ b/quiz.html
@@ -16,15 +16,17 @@
 <body>
     <div class="body-container">
         <nav>
-        <div>
+        <div id="hamburger-menu">
+        <div id="social-links">
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#quiz">Quiz</a></li>
-            <li><a href="#calendar">Calendar</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="about.html">About</a></li>
             <button>Login</button>
             <button>Sign Up</button>
           </ul>
+        </div>
         </div>
         </nav>
     </div>
@@ -36,6 +38,6 @@
     </header>
 
     <div class="quiz_contain">
-        <button class="quiz_button">Start Quiz</button>
+        <button class="quiz_button"><a href="questionTemplate.html">Start Quiz</a></button>
     </div>
 </body>
