--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <nav>
     <div>
       <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="quiz.html">Quiz</a></li>
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="about.html">About</a></li>
