--- a/calendar.html
+++ b/calendar.html
@@ -17,9 +17,10 @@
         <nav>
             <div>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
+                    <li><a href="explore.html">explore</a></li>
                     <li><a href="about.html">About</a></li>
                     <button>Login</button>
                     <button>Sign Up</button>
