--- a/calendar.html
+++ b/calendar.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
-                    <li><a href="explore.html">explore</a></li>
+                    <li><a href="explore.html">Explore</a></li>
                     <li><a href="about.html">About</a></li>
                     <button>Login</button>
                     <button>Sign Up</button>
