add more plant images and add alt text

--- a/explore.html
+++ b/explore.html
@@ -31,51 +31,64 @@
     <div class="container"> 
         <div class="item">African Violet
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/africanviolet.png">
+                <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
             </div>
         </div>
         <div class="item">Aglaonema
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/aglaonema.png">
+                <img src="../project-kvajjhula/img/aglaonema.png" alt="aglaonema">
             </div>
         </div>
         <div class="item">Alocasia
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/alocasia.png">
+                <img src="../project-kvajjhula/img/alocasia.png" alt="alocasia">
             </div>
         </div>
         <div class="item">Aloe Vera
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/aloevera.png">
+                <img src="../project-kvajjhula/img/aloevera.png" alt="aloe vera">
             </div>
         </div>
         <div class="item">Angel Wing Begonia
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/angelwingbegonia.png">
+                <img src="../project-kvajjhula/img/angelwingbegonia.png" alt="angel wing begonia">
             </div>
         </div>
         <div class="item">Anthurium
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/anthurium.png">
+                <img src="../project-kvajjhula/img/anthurium.png" alt="anthurium">
             </div>
         </div>
         <div class="item">Areca Palm
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/arecapalm.png">
+                <img src="../project-kvajjhula/img/arecapalm.png" alt="areca palm">
             </div>
         </div>
         <div class="item">Aspidistra
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/aspidistra.png">
+                <img src="../project-kvajjhula/img/aspidistra.png" alt="aspidistra">
             </div>
         </div>
-        <div class="item">Baby Rubber Plant</div>
-        <div class="item">Begonia</div>
-        <div class="item">Bird's Nest Fern</div>
-        <div class="item">Bird of Paradise</div>
-        <div class="item">Blue Star Fern</div>
-        <div class="item">Bonsai</div>
-
+        <div class="item">Baby Rubber Plant
+            <div class="plant-img">
+                <img src="../project-kvajjhula/img/babyrubberplant.png" alt="baby rubber plant">
+            </div>
+        </div>
+        <div class="item">Bird's Nest Fern
+            <div class="plant-img">
+                <img src="../project-kvajjhula/img/birdsnestfern.png" alt="bird's nest fern">
+            </div>
+        </div>
+        <div class="item">Bird of Paradise
+            <div class="plant-img">
+                <img src="../project-kvajjhula/img/birdofparadise.png" alt="bird of paradise">
+            </div>
+        </div>
+        <div class="item">Blue Star Fern
+            <div class="plant-img">
+                <img src="../project-kvajjhula/img/bluestarfern.png" alt="blue star fern">
+            </div>
+        </div>
     </div>
 
 </body>
