--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- link in Bootstrap here -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com">
+  <link href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -25,11 +25,11 @@
       <li class="nav-link"><a href="index.html">Home</a></li>
       <li class="nav-link"><a href="quiz.html">Quiz</a></li>
       <li class="nav-link"><a href="calendar.html">Calendar</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
       <li class="nav-link"><a href="explore.html">Explore</a></li>
+      <li class="nav-link"><a href="about.html">About</a></li>
       <div class="button-right">
-      <button class="btn btn-light">Login</button>
-      <button class="btn btn-light">Sign Up</button>
+      <button class="btn btn-light" style="color:#595c3f">Login</button>
+      <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
       </ul>
     </div>
     </div>
