--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="about-body">
   <main>
     <nav class="navbar-expand">
       <div>
