--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="home-body">
 
   <!-- Linking Pages -->
 
@@ -47,7 +47,8 @@
         <h2>Explore different types of plants</h2>
         <h2>Take the quiz to find the plants that work best for you</h2>
         <h2>Use the calendar to track your watering schedule</h2>
-        <h2>Login or Sign Up to begin </h2>
+        <button class="btn btn-default">Login</button>
+        <button class="btn btn-default">Sign Up</button>
       </div>
 
     </div>
