--- a/quiz.html
+++ b/quiz.html
@@ -5,39 +5,41 @@
   <meta charset="UTF-8">
   <title>Quiz</title>
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
   <link rel="stylesheet" href="css/quiz.css">
 </head>
 
-<body>
+<body class="quiz-body">
     <div class="body-container">
-        <nav>
-        <div id="hamburger-menu">
-        <div id="social-links">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="about.html">About</a></li>
-            <button>Login</button>
-            <button>Sign Up</button>
+      <nav class="navbar-expand">
+        <div>
+          <ul class="nav">
+          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+          <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
+          <li class="nav-link"><a href="explore.html">Explore</a></li>
+          <div class="button-right">
+            <button class="btn btn-light">Login</button>
+            <button class="btn btn-light">Sign Up</button>
+          </div>
           </ul>
         </div>
-        </div>
-        </nav>
+      </nav>
     </div>
 
-    <header>
-        <div class="container">
+    <header class="quiz-header">
+        <div class="quiz-container">
             <h1>Discover the plant that will fit you!</h1>
         </div>
     </header>
 
-    <div class="quiz_contain">
-        <button class="quiz_button"><a href="questionTemplate.html">Start Quiz</a></button>
+    <div class="quiz-contain">
+        <button class="quiz-button"><a href="questionTemplate.html">Start Quiz</a></button>
     </div>
 </body>
