Add new class names for specific styling

--- a/explore.html
+++ b/explore.html
@@ -11,80 +11,82 @@
     <link rel="stylesheet" href="css/explore.css">
 </head>
 
-<body>
-    <nav>
+<body class="explore-body">
+    <nav class="navbar-expand">
         <div>
-            <ul id="navigation">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#quiz">Quiz</a></li>
-                <li><a href="#calendar">Calendar</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#explore">Explore</a></li>
-                <button class="btn btn-light">Login</button>
-                <button class="btn btn-light">Sign Up</button>
-            </ul>
+          <ul class="nav">
+          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+          <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+          <li class="nav-link"><a href="explore.html">Explore</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
+          <div class="button-right">
+          <button class="btn btn-light" style="color:#595c3f">Login</button>
+          <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+          </ul>
         </div>
-    </nav>
+        </div>
+      </nav>
 
     <h1>Find your perfect plant!</h1>
     <h2>Search for different species of houseplants in our houseplant index.</h2>
-    <div class="container"> 
-        <div class="item">African Violet
+    <div class="explore-container"> 
+        <div class="explore-item">African Violet
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
             </div>
         </div>
-        <div class="item">Aglaonema
+        <div class="explore-item">Aglaonema
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/aglaonema.png" alt="aglaonema">
             </div>
         </div>
-        <div class="item">Alocasia
+        <div class="explore-item">Alocasia
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/alocasia.png" alt="alocasia">
             </div>
         </div>
-        <div class="item">Aloe Vera
+        <div class="explore-item">Aloe Vera
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/aloevera.png" alt="aloe vera">
             </div>
         </div>
-        <div class="item">Angel Wing Begonia
+        <div class="explore-item">Angel Wing Begonia
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/angelwingbegonia.png" alt="angel wing begonia">
             </div>
         </div>
-        <div class="item">Anthurium
+        <div class="explore-item">Anthurium
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/anthurium.png" alt="anthurium">
             </div>
         </div>
-        <div class="item">Areca Palm
+        <div class="explore-item">Areca Palm
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/arecapalm.png" alt="areca palm">
             </div>
         </div>
-        <div class="item">Aspidistra
+        <div class="explore-item">Aspidistra
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/aspidistra.png" alt="aspidistra">
             </div>
         </div>
-        <div class="item">Baby Rubber Plant
+        <div class="explore-item">Baby Rubber Plant
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/babyrubberplant.png" alt="baby rubber plant">
             </div>
         </div>
-        <div class="item">Bird's Nest Fern
+        <div class="explore-item">Bird's Nest Fern
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/birdsnestfern.png" alt="bird's nest fern">
             </div>
         </div>
-        <div class="item">Bird of Paradise
+        <div class="explore-item">Bird of Paradise
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/birdofparadise.png" alt="bird of paradise">
             </div>
         </div>
-        <div class="item">Blue Star Fern
+        <div class="explore-item">Blue Star Fern
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/bluestarfern.png" alt="blue star fern">
             </div>
