--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -2,41 +2,44 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Quiz</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-
-  <link rel="stylesheet" href="css/questionTemplate.css">
+    <meta charset="UTF-8">
+    <title>Quiz</title>
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+  
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="body-container">
-        <nav>
-        <div>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#quiz">Quiz</a></li>
-            <li><a href="#calendar">Calendar</a></li>
-            <li><a href="#about">About</a></li>
-            <button>Login</button>
-            <button>Sign Up</button>
-          </ul>
-        </div>
+        <nav class="navbar-expand">
+          <div>
+            <ul class="nav">
+            <li class="nav-link"><a href="index.html">Home</a></li>
+            <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+            <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+            <li class="nav-link"><a href="about.html">About</a></li>
+            <li class="nav-link"><a href="explore.html">Explore</a></li>
+            <div class="button-right">
+              <button class="btn btn-light">Login</button>
+              <button class="btn btn-light">Sign Up</button>
+            </div>
+            </ul>
+          </div>
         </nav>
-    </div>
+      </div>
 
-    <div class="quiz-container">
+    <div class="quiz-body-container">
         <section class=questions-part>
             <div class=question>
                 <h2 class=question>Have you owned a plant before?</h2>
             </div>
-            <div class="options">
-                <button class="button-choice" role="button">No</button>
-                <button class="button-choice" role="button">Yes</button>
+            <div class="quiz-options">
+                <button class="quiz-button-choice" role="button">No</button>
+                <button class="quiz-button-choice" role="button">Yes</button>
             </div>
         </section>
     </div>
