--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
-  <link rel="stylesheet" href="css/quiz.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="quiz-body">
