Update class names for headings and comment out redundant code with style.css

--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Kriti Vajjhula">
+    <meta name="author" content="Kriti Vajjhula, ">
     <meta name="description" content="This page allows the user to view an index of different kinds of houseplants">
     <title>Explore!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
@@ -28,8 +28,8 @@
         </div>
       </nav>
 
-    <h1>Find your perfect plant!</h1>
-    <h2>Search for different species of houseplants in our houseplant index.</h2>
+    <h1 class="explore-heading">Find your perfect plant!</h1>
+    <h2 class="explore-subheading">Search for different species of houseplants in our houseplant index.</h2>
     <div class="explore-container"> 
         <div class="explore-item">African Violet
             <div class="plant-img">
