--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
+  <meta name="description" content="This is the homepage to our website">
   <title>Plants</title>
-
   <!-- link in Bootstrap here -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-
   <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
