--- a/calendar.html
+++ b/calendar.html
@@ -5,32 +5,36 @@
     <meta charset="UTF-8">
     <title>Calendar</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
-    <link rel="stylesheet" href="css/calendar.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <div class="body-container">
-        <nav>
-            <div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="calendar.html">Calendar</a></li>
-                    <li><a href="explore.html">Explore</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <button>Login</button>
-                    <button>Sign Up</button>
-                </ul>
-            </div>
-        </nav>
-    </div>
+<body class="calendar-body">
+    <nav class="navbar-expand">
+        <div>
+            <ul class="nav">
+                <li class="nav-link"><a href="index.html">Home</a></li>
+                <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+                <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+                <li class="nav-link"><a href="explore.html">Explore</a></li>
+                <li class="nav-link"><a href="about.html">About</a></li>
+                <div class="button-right">
+                    <button class="btn btn-light" style="color: #595c3f">Login</button>
+                    <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+
+                </div>
+            </ul>
+        </div>
+    </nav>
+
 
     <div class="calendar">
-        <h2 class="month-name">October 2022</h2>
+        <h1 class="month-name">October 2022</h1>
         <table>
             <thead>
                 <tr>
