--- a/explore.html
+++ b/explore.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This page allows the user to view an index of different kinds of houseplants">
     <title>Explore!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/explore.css">
 </head>
 
 <body class="explore-body">
