link calender to new event page

--- a/calendar.html
+++ b/calendar.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Ishita Saxena, ">
+    <meta name="description" content="This page allows the user to input their personal plant care steps in a calendar feature">
     <title>Calendar</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
@@ -127,7 +130,7 @@
         </table>
     </div>
     <div class="add-event">
-        <button class="new-event">+</button>
+        <button class="new-event"><a href="calendarevent.html">+</a></button>
         <p class="button-text">Add New Event</p>
     </div>
 </body>
