--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="body-container">
+    <div class="quiz-body-container">
         <nav class="navbar-expand">
           <div>
             <ul class="nav">
@@ -32,14 +32,14 @@
         </nav>
       </div>
 
-    <div class="quiz-body-container">
+    <div class="quiz-question-container">
         <section class=questions-part>
             <div class=question>
                 <h2 class=question>Have you owned a plant before?</h2>
             </div>
             <div class="quiz-options">
-                <button class="quiz-button-choice" role="button">No</button>
                 <button class="quiz-button-choice" role="button">Yes</button>
+                <button class="quiz-button-choice" role="button">No</button>
             </div>
         </section>
     </div>
