--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Saimanasvi Charugundla">
+  <meta name="description" content="This is the start quiz page to our website">
+
   <title>Quiz</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
