Add header, footer, and form

--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
+  <meta name="description" content="This is the about page for our website">
   <title>About</title>
 
   <!-- link font -->
@@ -53,6 +57,28 @@
       </div>
     </section>
   </main>
+
+  <section class="contact-form">
+    <h2>Contact Us!</h2>
+    <form>
+      <div class="form-item">
+        <label for="name-input">Name:</label> 
+        <input id="name-input" type="text" name="username">
+      </div>
+      <div class="form-item">
+        <label for="email-input">Email:</label>
+        <input id="email-input" type="email" name="useremail">
+      </div>
+      <div class="form-item">
+        <label for="comment-text">Comment:</label> 
+        <textarea id="comment-text"></textarea>
+      </div>
+      <div>
+        <button type="submit">Submit</button>
+      </div>      
+    </form>
+  </section>
+
 </body>
 
 </html>
