--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
 
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -45,7 +47,10 @@
       </div>
 
       <div id="text-container" class="col">
-        <h1>Start your plant journey today.</h1>
+        <header>
+          <h1>Plant Parenthood</h1>
+      </header>
+        <h2>Start your plant journey today.</h2>
         <h2>Explore different types of plants</h2>
         <h2>Take the quiz to find the plants that work best for you</h2>
         <h2>Use the calendar to track your watering schedule</h2>
@@ -57,6 +62,9 @@
 
   </div>
 
+  <footer>
+    <cite>&copy; Alp Duran https://unsplash.com/photos/5MrddkW_Cbg</cite>
+  </footer>  
 </body>
 
 </html>
