--- a/quiz.html
+++ b/quiz.html
@@ -37,6 +37,7 @@
     </div>
 
     <header class="quiz-header">
+      <section id=quiz-start>
         <div class="quiz-container">
             <h1>Discover the plant that will fit you!</h1>
         </div>
@@ -45,4 +46,6 @@
     <div class="quiz-contain">
         <button class="quiz-button"><a href="questionTemplate.html">Start Quiz</a></button>
     </div>
+  </section>
+  
 </body>
