--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -36,7 +36,7 @@
       </div>
 
     <div class="quiz-question-container">
-        <section class=questions-part>
+        <section id=question class=questions-part>
             <div class=question>
                 <h2 class=question>Have you owned a plant before?</h2>
             </div>
@@ -46,4 +46,8 @@
             </div>
         </section>
     </div>
+
+    <footer>
+      <cite>&copy; Alp Duran https://unsplash.com/photos/5MrddkW_Cbg</cite>
+    </footer>  
 </body>
