--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
       <div id="text-container" class="col">
         <header>
+          <img src="img/plant-icon.png" alt="plant icon">
           <h1>Plant Parenthood</h1>
       </header>
         <h2>Start your plant journey today.</h2>
