change made to nav bar

--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -18,21 +18,21 @@
 
 <body>
     <div class="quiz-body-container">
-        <nav class="navbar-expand">
-          <div>
-            <ul class="nav">
-            <li class="nav-link"><a href="index.html">Home</a></li>
-            <li class="nav-link"><a href="quiz.html">Quiz</a></li>
-            <li class="nav-link"><a href="calendar.html">Calendar</a></li>
-            <li class="nav-link"><a href="about.html">About</a></li>
-            <li class="nav-link"><a href="explore.html">Explore</a></li>
-            <div class="button-right">
-              <button class="btn btn-light">Login</button>
-              <button class="btn btn-light">Sign Up</button>
-            </div>
-            </ul>
-          </div>
-        </nav>
+      <nav class="navbar-expand">
+        <div>
+          <ul class="nav">
+          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+          <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+          <li class="nav-link"><a href="explore.html">Explore</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
+          <div class="button-right">
+          <button class="btn btn-light" style="color:#595c3f">Login</button>
+          <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+          </ul>
+        </div>
+        </div>
+      </nav>
       </div>
 
     <div class="quiz-question-container">
