--- a/quiz.html
+++ b/quiz.html
@@ -25,13 +25,13 @@
           <li class="nav-link"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="quiz.html">Quiz</a></li>
           <li class="nav-link"><a href="calendar.html">Calendar</a></li>
-          <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link"><a href="explore.html">Explore</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
           <div class="button-right">
-            <button class="btn btn-light">Login</button>
-            <button class="btn btn-light">Sign Up</button>
-          </div>
+          <button class="btn btn-light" style="color:#595c3f">Login</button>
+          <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
           </ul>
+        </div>
         </div>
       </nav>
     </div>
@@ -47,5 +47,5 @@
         <button class="quiz-button"><a href="questionTemplate.html">Start Quiz</a></button>
     </div>
   </section>
-  
+
 </body>
