Add CSS and content for plant info page

--- a/plantinfo.html
+++ b/plantinfo.html
@@ -29,4 +29,23 @@
         </div>
       </nav>
 
+    <div class="plant-info-container">
+        <h1 class="plant-info-heading">African Violet</h1>
+        <div class="plant-img-container">
+            <div class="plant-img">
+                <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
+            </div>
+        </div>
+        <div class="care-info">
+        <p>Plant Care Information</p>
+        <ul>
+            <li>LIGHT: Never place your african violet in direct sunlight. For flowers to bloom, brighter light is needed.</li>
+            <li>HUMIDITY: This plant requires high humidity, but avoid misting the leaves directly.</li>
+            <li>WATERING: Keep compost moist and allow it to dry out slightly between watering's.</li>
+            <li>Average warmth at 15°C - 21°C / 60°F - 72°F. Try to keep the temperature above 15°C / 60°F in Winter.</li>
+          </ul>  
+        </div>
+          
+    </div>
+
 </body>
