--- a/calendar.html
+++ b/calendar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Ishita Saxena, ">
+    <meta name="author" content="Ishita Saxena, Kriti Vajjhula, Archita Singh, Manu Charu">
     <meta name="description" content="This page allows the user to input their personal plant care steps in a calendar feature">
     <title>Calendar</title>
 
