--- a/calendarevent.html
+++ b/calendarevent.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Ishita Saxena, ">
+    <meta name="author" content="Ishita Saxena, Kriti Vajjhula, Archita Singh, Manu Charu">>
     <meta name="description" content="This page allows the user to add an event to the calendar">
     <title>Calendar</title>
 
