Link plant info page to explore page

--- a/explore.html
+++ b/explore.html
@@ -34,7 +34,9 @@
     <div class="explore-container"> 
         <div class="explore-item">African Violet
             <div class="plant-img">
+                <a href="../project-kvajjhula/plantinfo.html">
                 <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
+                </a>
             </div>
         </div>
         <div class="explore-item">Aglaonema
