Fix font across pages

--- a/project.html
+++ b/project.html
@@ -5,6 +5,11 @@
     <meta name="author" content="Ishita Saxena, Archita Singh, Kriti Vajjhula, Saimanasavi Charugundla ">
     <meta name="description" content="Project Proposal">
     <title>Plant Care Project Proposal</title>
+
+    <link href="https://fonts.googleapis.com">
+    <link href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">  
+
     <link rel="stylesheet" href="css/proposal.css">
 </head>
 <body>
