--- a/explore.html
+++ b/explore.html
@@ -7,31 +7,38 @@
     <meta name="author" content="Kriti Vajjhula, ">
     <meta name="description" content="This page allows the user to view an index of different kinds of houseplants">
     <title>Explore!</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/explore.css">
+
+    <!-- link font -->
+    <link href="https://fonts.googleapis.com">
+    <link href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="explore-body">
 
     <nav class="navbar-expand">
         <div>
-          <ul class="nav">
-          <li class="nav-link"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="quiz.html">Quiz</a></li>
-          <li class="nav-link"><a href="calendar.html">Calendar</a></li>
-          <li class="nav-link"><a href="explore.html">Explore</a></li>
-          <li class="nav-link"><a href="about.html">About</a></li>
-          <div class="button-right">
-          <button class="btn btn-light" style="color:#595c3f">Login</button>
-          <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
-          </ul>
+            <ul class="nav">
+                <li class="nav-link"><a href="index.html">Home</a></li>
+                <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+                <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+                <li class="nav-link"><a href="explore.html">Explore</a></li>
+                <li class="nav-link"><a href="about.html">About</a></li>
+                <div class="button-right">
+                    <button class="btn btn-light" style="color:#595c3f">Login</button>
+                    <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+            </ul>
         </div>
         </div>
-      </nav>
+    </nav>
 
     <h1 class="explore-heading">Find your perfect plant!</h1>
     <h2 class="explore-subheading">Search for different species of houseplants in our houseplant index.</h2>
-    <div class="explore-container"> 
+    <div class="explore-container">
         <div class="explore-item">African Violet
             <div class="plant-img">
                 <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
