Fix styling on quiz and explore pages

--- a/calendar.html
+++ b/calendar.html
@@ -2,23 +2,29 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Ishita Saxena, Kriti Vajjhula, Archita Singh, Manu Charu">
-    <meta name="description" content="This page allows the user to input their personal plant care steps in a calendar feature">
+    <meta name="description"
+        content="This page allows the user to input their personal plant care steps in a calendar feature">
+
     <title>Calendar</title>
 
+    <!-- link font -->
+    <link href="https://fonts.googleapis.com">
+    <link href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
+
+    <!-- link bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
-    <link href="https://fonts.googleapis.com">
-  <link href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
-
-
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body class="calendar-body">
+
     <nav class="navbar-expand">
         <div>
             <ul class="nav">
@@ -30,12 +36,10 @@
                 <div class="button-right">
                     <button class="btn btn-light" style="color: #595c3f">Login</button>
                     <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
-
                 </div>
             </ul>
         </div>
     </nav>
-
 
     <div class="calendar">
         <h1 class="month-name">October 2022</h1>
@@ -134,4 +138,7 @@
         <button class="new-event"><a href="calendarevent.html">+</a></button>
         <p class="button-text">Add New Event</p>
     </div>
+
 </body>
+
+</html>
