--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="This is the homepage to our website">
   
   <title>Plants</title>
-  <!-- link in Bootstrap here -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
+  <!-- link font -->
   <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
 
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <!-- link bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body class="home-body">
@@ -34,8 +37,8 @@
       <div class="button-right">
       <button class="btn btn-light" style="color:#595c3f">Login</button>
       <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+      </div>
       </ul>
-    </div>
     </div>
   </nav>
 
@@ -66,6 +69,7 @@
   <footer>
     <cite>&copy; Alp Duran https://unsplash.com/photos/5MrddkW_Cbg</cite>
   </footer>  
+
 </body>
 
 </html>
