--- a/calendarevent.html
+++ b/calendarevent.html
@@ -2,23 +2,28 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Ishita Saxena, Kriti Vajjhula, Archita Singh, Manu Charu">>
     <meta name="description" content="This page allows the user to add an event to the calendar">
+    
     <title>Calendar</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-
+    <!-- link font -->
     <link href="https://fonts.googleapis.com">
     <link href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
-  
 
+    <!-- link bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+  
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body class="calendar-event-body">
+
     <nav class="navbar-expand">
         <div>
             <ul class="nav">
@@ -60,5 +65,8 @@
                 </section>
             </div>
         </div>
-
     </div>
+
+</body>
+
+</html>
