--- a/explore.html
+++ b/explore.html
@@ -2,20 +2,24 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Kriti Vajjhula, ">
     <meta name="description" content="This page allows the user to view an index of different kinds of houseplants">
-    <title>Explore!</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <title>Explore!</title>
 
     <!-- link font -->
     <link href="https://fonts.googleapis.com">
     <link href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
 
+    <!-- link bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body class="explore-body">
@@ -31,9 +35,10 @@
                 <div class="button-right">
                     <button class="btn btn-light" style="color:#595c3f">Login</button>
                     <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+                </div>
             </ul>
         </div>
-        </div>
+
     </nav>
 
     <h1 class="explore-heading">Find your perfect plant!</h1>
@@ -42,7 +47,7 @@
         <div class="explore-item">African Violet
             <div class="plant-img">
                 <a href="../project-kvajjhula/plantinfo.html">
-                <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
+                    <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
                 </a>
             </div>
         </div>
