--- a/plantinfo.html
+++ b/plantinfo.html
@@ -2,18 +2,24 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="Shows a quick informational guide to the African Violet Plant">
-  <title>Explore!</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+ 
+  <title>Explore</title>
+ 
+  <!-- link font -->
   <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
 
+  <!-- link bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -30,7 +36,6 @@
           <button class="btn btn-light" style="color:#595c3f">Login</button>
           <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
       </ul>
-    </div>
     </div>
   </nav>
 
