--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -2,19 +2,23 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Saimanasvi Charugundla">
   <meta name="description" content="This is the quiz question page to our website">
 
   <title>Quiz</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-
+  <!-- link font -->
   <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
 
+  <!-- link bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+ 
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -30,10 +34,10 @@
           <div class="button-right">
             <button class="btn btn-light" style="color:#595c3f">Login</button>
             <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+          </div>
         </ul>
       </div>
-  </div>
-  </nav>
+    </nav>
   </div>
 
   <div class="quiz-question-container">
@@ -42,8 +46,8 @@
         <h2 class=question>Have you owned a plant before?</h2>
       </div>
       <div class="quiz-options">
-        <button class="quiz-button-choice" role="button">Yes</button>
-        <button class="quiz-button-choice" role="button">No</button>
+        <button class="btn btn-default">Yes</button>
+        <button class="btn btn-default">No</button>
       </div>
     </section>
   </div>
@@ -51,4 +55,7 @@
   <footer>
     <cite>&copy; Alp Duran https://unsplash.com/photos/5MrddkW_Cbg</cite>
   </footer>
+
 </body>
+
+</html>
