Update background colors for consistency

--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -21,8 +21,7 @@
 
 </head>
 
-<body>
-  <div class="quiz-body-container">
+<body class="quiz-template-body">
     <nav class="navbar-expand">
       <div>
         <ul class="nav">
@@ -38,7 +37,7 @@
         </ul>
       </div>
     </nav>
-  </div>
+  
 
   <div class="quiz-question-container">
     <section id=question class=questions-part>
@@ -55,7 +54,7 @@
   <footer>
     <cite>&copy; Alp Duran https://unsplash.com/photos/5MrddkW_Cbg</cite>
   </footer>
-
+  
 </body>
 
 </html>
