change made to quiz calendar and css files

--- a/calendarevent.html
+++ b/calendarevent.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Ishita Saxena, Kriti Vajjhula, Archita Singh, Manu Charu">>
+    <meta name="author" content="Ishita Saxena, Kriti Vajjhula, Archita Singh, Manu Charu">
     <meta name="description" content="This page allows the user to add an event to the calendar">
     
     <title>Calendar</title>
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="Calendar-Event">
+    <div class="calendar-Event">
         <div class="card-container">
             <nav>
                 <button class="card-nav">X</button>
