quiz and style change

--- a/quiz.html
+++ b/quiz.html
@@ -49,7 +49,9 @@
   </header>
 
   <div class="quiz-contain">
-    <button class="btn btn-light" style="color:#595c3f"><a href="questionTemplate.html">Start Quiz</a></button>
+    <button class="btn btn-light">
+      <a href="questionTemplate.html">Start Quiz</a>
+    </button>
   </div>
   </section>
   </div>
